updated techquila blog section

--- a/index.html
+++ b/index.html
@@ -324,18 +324,19 @@
         <div class="row">
 
           <div class="owl-carousel owl-theme">
+
             <div class="col-xl-12 col-lg-4 col-md-6">
               <div class="testimonial-item">
-                <p>
+                <!-- <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   The dawn of every century ushers in a new era of possibilities.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="tequila/img1.jpg" class="testimonial-img">
+                </p> -->
+                <img src="tequila/pic11.png" class="testimonial-img">
                 <div class="testimonial-item">
-                  <h3>Quantum future</h3>
+                  <h3>GTA & its impact</h3>
                   <h3>
-                    <a href="https://techquila-istenitc.netlify.app/posts/quantum-dots-will-it-succeed-the-semiconductor-transistor/"
+                    <a href="https://techquila.istenitc.com/subpages/11"
                       target="_blank">Read more</a>
                   </h3>
                 </div>
@@ -344,16 +345,34 @@
 
             <div class="col-xl-12 col-lg-4 col-md-6">
               <div class="testimonial-item">
-                <p>
+                <!-- <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The dawn of every century ushers in a new era of possibilities.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p> -->
+                <img src="tequila/pic10.jpg" class="testimonial-img">
+                <div class="testimonial-item">
+                  <h3>Quantum Dots</h3>
+                  <h3>
+                    <a href="https://techquila.istenitc.com/subpages/10"
+                      target="_blank">Read more</a>
+                  </h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="col-xl-12 col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                <!-- <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Can AI help in achieving marketing goals?
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="tequila/img2.jpeg" class="testimonial-img">
+                </p> -->
+                <img src="tequila/pic9.jpg" class="testimonial-img">
                 <div class="testimonial-item">
-                  <h3>Artificial Intelligence</h3>
+                  <h3>The Human Condition</h3>
                   <h3>
-                    <a href="https://techquila-istenitc.netlify.app/posts/the-human-condition/"
+                    <a href="https://techquila.istenitc.com/subpages/9"
                       target="_blank">Read more</a>
                   </h3>
                 </div>
@@ -362,16 +381,16 @@
 
             <div class="col-xl-12 col-lg-4 col-md-6">
               <div class="testimonial-item">
-                <p>
+                <!-- <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   We are not just fighting an epidemic, we are fighting an info-demic
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="tequila/img3.png" class="testimonial-img">
+                </p> -->
+                <img src="tequila/pic8.png" class="testimonial-img">
                 <div class="testimonial-item">
-                  <h3>Telling Science Stories Well</h3>
+                  <h3>The Deep Web</h3>
                   <h3>
-                    <a href="https://techquila-istenitc.netlify.app/posts/the-deep-web-and-why-it-s-not-as-scary-as-you-think/"
+                    <a href="https://techquila.istenitc.com/subpages/8"
                       target="_blank">Read more</a>
                   </h3>
                 </div>
@@ -380,16 +399,16 @@
 
             <div class="col-xl-12 col-lg-4 col-md-6">
               <div class="testimonial-item">
-                <p>
+                <!-- <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Yet another article you’ll “read later”.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="tequila/img4.jpeg" class="testimonial-img">
+                </p> -->
+                <img src="tequila/pic7.jpg" class="testimonial-img">
                 <div class="testimonial-item">
-                  <h3>Procrastination</h3>
+                  <h3>The Euphoria of Traveling</h3>
                   <h3>
-                    <a href="https://techquila-istenitc.netlify.app/posts/the-euphoria-of-traveling/"
+                    <a href="https://techquila.istenitc.com/subpages/7"
                       target="_blank">Read more</a>
                   </h3>
                 </div>
@@ -398,16 +417,101 @@
 
             <div class="col-xl-12 col-lg-4 col-md-6">
               <div class="testimonial-item">
-                <p>
+                <!-- <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   The seventh edition of Newton Speaks saw Toby Negrin, Chief Product Officer...
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="tequila/img5.png" class="testimonial-img">
+                </p> -->
+                <img src="tequila/pic6.png" class="testimonial-img">
                 <div class="testimonial-item">
-                  <h3>Back-stage at the Wikimedia Foundation</h3>
+                  <h3>5G And The Phone-y Conspiracies</h3>
                   <h3>
-                    <a href="https://techquila-istenitc.netlify.app/posts/5g-and-the-phone-y-conspiracies/"
+                    <a href="https://techquila.istenitc.com/subpages/6"
+                      target="_blank">Read more</a>
+                  </h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="col-xl-12 col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                <!-- <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The seventh edition of Newton Speaks saw Toby Negrin, Chief Product Officer...
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p> -->
+                <img src="tequila/pic5.png" class="testimonial-img">
+                <div class="testimonial-item">
+                  <h3>Can Li-Fi replace Wi-Fi?</h3>
+                  <h3>
+                    <a href="https://techquila.istenitc.com/subpages/5"
+                      target="_blank">Read more</a>
+                  </h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="col-xl-12 col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                <!-- <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The seventh edition of Newton Speaks saw Toby Negrin, Chief Product Officer...
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p> -->
+                <img src="tequila/pic4.jpg" class="testimonial-img">
+                <div class="testimonial-item">
+                  <h3>Sustainability As A Lifestyle</h3>
+                  <h3>
+                    <a href="https://techquila.istenitc.com/subpages/4"
+                      target="_blank">Read more</a>
+                  </h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="col-xl-12 col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                <!-- <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The seventh edition of Newton Speaks saw Toby Negrin, Chief Product Officer...
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p> -->
+                <img src="tequila/pic3.jpg" class="testimonial-img">
+                <div class="testimonial-item">
+                  <h3>Quantum future</h3>
+                  <h3>
+                    <a href="https://techquila.istenitc.com/subpages/3"
+                      target="_blank">Read more</a>
+                  </h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="col-xl-12 col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                <!-- <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The seventh edition of Newton Speaks saw Toby Negrin, Chief Product Officer...
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p> -->
+                <img src="tequila/pic2.jpg" class="testimonial-img">
+                <div class="testimonial-item">
+                  <h3>Can AI help in achieving marketing goals?</h3>
+                  <h3>
+                    <a href="https://techquila.istenitc.com/subpages/2"
+                      target="_blank">Read more</a>
+                  </h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="col-xl-12 col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                <!-- <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The seventh edition of Newton Speaks saw Toby Negrin, Chief Product Officer...
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p> -->
+                <img src="tequila/pic1.jpg" class="testimonial-img">
+                <div class="testimonial-item">
+                  <h3>Telling science stories well</h3>
+                  <h3>
+                    <a href="https://techquila.istenitc.com/subpages/1"
                       target="_blank">Read more</a>
                   </h3>
                 </div>
