update induction form

--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
     </div> -->
 
   </section><!-- End Hero -->
-
+  <div id="form-main">
+    <div id="ded">Join us at ISTE club and be part of the Legacy</div>
+    <a href="https://forms.gle/nPUKKkGfHHV9ihiw5" id="form">Fill The Form</a>
+    <div id="ded">Deadline:Tuesday(8 Oct) - 12pm</div>
+</div>
 
   <!-- Feature Start--> <!--chinmay_edit-->
   <div class="feature wow fadeInUp flex" data-wow-delay="0.1s">
